# Copyright 2020 Kilian Swannet, San Kilkis

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied. See the License for the specific language governing
# permissions and limitations under the License.

[metadata]
name = gammapy
description = A Thin Airfoil Theory Solver
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords =
    aerodynamics
    aircraft
license = Apache License Version 2.0
license-file = LICENSE.md
url = https://github.com/skilkis/pybot
author = Kilian Swannet, San Kilkis
author_email = K.Swannet@student.tudelft.nl, Kilkis@student.tudelft.nl
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    License :: OSI Approved :: Apache License Version 2.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Education

[options]
zip_safe = false
packages = find:
python_requires = >= 3.8
package_dir =
    = src
install_requires =
    matplotlib
    numpy
    Deprecated
    scipy
setup_requires =
    setuptools_scm
    setuptools >= 40
tests_require =
    pytest
    pytest-cov

# [options.package_data]
# gammapy = ../bin/*

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
    flake8-black
    flake8-docstrings
    flake8-isort
xfoil =
    xfoil@git+https://github.com/skilkis/xfoil_wrapper.git

[flake8]
# Strict PEP-8 Guidelines for Line-Length and Doc-Strings
max-line-length = 79
max-doc-length = 72
exclude =
    # No need to traverse our git directory
    .git
    # There's no value in checking cache directories
    **/*__pycache__
    # Exclude VS Code Folder
    .vscode
    # Exclude Python Packages in .env
    .env
    # Temporary location of packaged files during pip install
    build
# Cyclomatic McCabe Complexity
max-complexity = 10
# Forcing Google convention docstrings
docstring-convention = google
extend-ignore =
    D107 # Silences missing Docstring in __init__()
    D104 # Silences missing docstring in public package
    D202 # Silences no blank lines allowed after docstring (for Black compat.)
    W503 # Silences line-break not after operator (This is a new convention)
    E203 # Silences whitespace before ':' (for Black compatibility)
# D101: Silences missing docstring in public class for tests directory
per-file-ignores =
    tests/*:D101,D100

[tool:isort]
line_length = 79
# Sets the imports which should appear as third-party packages
known_third_party =
    matplotlib
    numpy
    Deprecated
    xfoil
# The settings below add compatibility for use with the Black formatter
# See: https://github.com/psf/black/issues/127#issuecomment-520760380
multi_line_output = 3
include_trailing_comma = True

# [doc8]
# Style-guide enforcement for .rst files
# file-encoding =

[tool:pytest]
# Runs coverage.py through use of the pytest-cov plugin
# An xml report is generated and results are output to the terminal
addopts =
    --cov
    --cov-report xml:coverage.xml
    --cov-report term
filterwarnings =
    ignore::DeprecationWarning:jinja2.*:
markers =
    sphinx
# Sets the minimum allowed pytest version
minversion = 5.0
# Sets the path where test files are located (Speeds up Test Discovery)
testpaths = tests

[coverage:run]
# Due to a strange bug with xml output of coverage.py not writing the full-path
# of the sources, the full root directory is presented as a source alongside
# the main package. As a result any importable Python file/package needs to be
# included in the omit
source =
    gammapy
    .
# Excludes the following directories from the coverage report
# .env = Default name of the virtual environment from CONTRIBUTING.md
# Global
omit =
    .env/*
    tests/*
    assignment/*
    setup.py
